fixed module structure

--- a/app/templates/life/main.html
+++ b/app/templates/life/main.html
@@ -7,8 +7,8 @@
 <body>
 <form id="controlsForm" method="post">
     <div id="runDiv">
-        <button id="resetButton">Stop/Edit</button>
-        <button id="runButton">Run</button>
+        <button id="resetButton" type="button">Stop/Edit</button>
+        <button id="runButton" type="button">Run</button>
     </div>
     <div id="speedSliderDiv">
         <label for="speedSlider">Speed</label><input id="speedSlider" type="range" step="1" min="0" max="10" value="1">
