--- a/app/templates/sixteen/game.html
+++ b/app/templates/sixteen/game.html
@@ -47,6 +47,8 @@
         </div>
     </div>
     <script type="text/javascript">
-        alert("Heeere's Johnny!");
+        var board = new Board();
+        board.throwDice();
+        board.draw();
     </script>
 {% endblock %}
